dt/istio/UC0_canary-deployment-routing-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-paymentservice
spec:
  hosts: 
  - paymentservice.hipstershop.svc.cluster.local
  http:
  - route:
    - destination:
        host: paymentservice.hipstershop.svc.cluster.local
        subset: currentversion
      weight: 50
    - destination:
        host: paymentservice.hipstershop.svc.cluster.local
        subset: vnext
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-paymentservice
spec:
  host: paymentservice.hipstershop.svc.cluster.local
  subsets:
  - name: currentversion
    labels:
      app: paymentservice
      app.kubernetes.io/version: 1.0.4
  - name: vnext
    labels:
      app: paymentservice
      app.kubernetes.io/version: 1.1.0
